# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  cmake_generator.py  setup.py
client/: Cargo.toml
client/src/: main.rs
editor/: Cargo.toml
editor/src/: main.rs
example/: CMakeLists.txt  basic_example.cpp  normal_renderer.cpp
include/algorithm/: i_algorithm.h  normal_renderer.hpp  simple_tracer.hpp
include/image/: image.hpp
include/scene/: bullet_world.hpp  world.hpp
include/type/: math.hpp  position3d.hpp
server/: Cargo.toml
server/src/: main.rs
sjrt/: Cargo.toml  build.rs
sjrt-ffi/: Cargo.toml
sjrt-ffi/include/: sjrt_Header.h
sjrt-ffi/src/: external_buffer.rs  external_scene.rs  lib.rs
sjrt/examples/: hello_ray_tracer.rs
sjrt/resources/: sjrt.proto
sjrt/src/: bidirectional_reflectance_distribution_function.rs  camera.rs  default_sampling_estimation.rs  image.rs  lib.rs  material_info.rs  nee.rs  parallelize_system.rs  path_tracer.rs  property.rs  rapier_scene.rs  ray.rs  traits.rs  vector.rs
sjrt/src/brdf/: lambert.rs  mod.rs  perfect_specular_reflection.rs
sjrt/src/net/: mod.rs  rendering_client.rs  rendering_server.rs
sjrt/src/sampling_algorithm/: default_sampling_estimation.rs  mod.rs  nee.rs
sjrt/src/scene/: loader.rs  mod.rs  primitive.rs  scene.rs
sjrt/src/system/: mod.rs
src/algorithm/: normal_renderer.cpp  simple_tracer.cpp
src/image/: image.cpp
src/scene/: bullet_world.cpp  world.cpp
src/type/: math.cpp  position3d.cpp
