[package]
name = "sjrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"]}
futures= "0.3.19"
image = "0.23.14"
rapier3d = { version = "0.11.1", features = [ "simd-stable" ] }
nalgebra = "0.30.1"
rand = "0.8.4"