[package]
name = "sjrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"]}
futures= "0.3.19"
image = "0.23.14"
rapier3d = { version = "0.11.1", features = [ "simd-stable" ] }
nalgebra = "0.30.1"
rand = "0.8.4"
rand_distr = "0.4.3"
tonic = "0.6.2"
prost = "*"

serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "*"

[build-dependencies]
tonic-build = "0.6.2"


[dev-dependencies]
clap = { version = "3.0.12", features = ["derive"] }